# embree-vs-radeonrays

./: .gitignore  CMakeLists.txt  application.h  embree-config.cmake  main.cpp
lib/: embree3.lib
test_em/: EMApplication.cpp  EMApplication.h
test_rr/: RRApplication.cpp  RRApplication.h
